# dress-roomshow

./: .gitignore  .graphifyignore  .replit  AGENTS.md  AUDIT_PLAN.md  AUDIT_REPORT.md  CLAUDE.md  README.md  TEST_FILE.md  UX_AUDIT_REPORT.md  add_appointments_route.sh  add_barcode_support.sh  add_image_upload_feature.sh  add_missing_functions.sh  clean_dashboard_imports.sh  clean_imports.sh  eslint.config.mjs  fix_add_dress_barcode.sh  fix_appointment_service.sh  fix_dashboard.sh  fix_dress_service.sh  fix_dress_service_types.sh  fix_dresses_page.sh  fix_errors_part1.sh  fix_jsx_error.sh  index.html  me  package-lock.json  package.json  pnpm-lock.yaml  replit.md  tsconfig.json  tsconfig.tsbuildinfo  update_add_dress_input.sh  update_add_dress_modal.sh  update_dress_details.sh  update_dress_details_with_barcode.sh  update_dress_service.sh  update_routes.sh  update_sidebar.sh  (+1 more)
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md  hooks.json
DELIVERY/: INSTALLATION_GUIDE.md  RELEASE_NOTES_V020.md  SALE_READINESS_REPORT.md
attached_assets/: Pasted-Finalize-the-completed-implementation-prepare-it-for-re_1779318508723.txt  Pasted-You-are-taking-over-the-repository-below-as-a-senior-fu_1779316942455.txt
docs/: ARCHITECTURE.md  ARCHITECTURE_BASELINE.md  BUSINESS_MODEL.md  CURRENT_STATE_AUDIT.md  DATABASE.md  EXECUTION_CHECKLIST.md  FINAL_DELIVERY_PLAN.md  FOUNDATION_STATUS.md  LOCAL_DATABASE_ARCHITECTURE.md  ROADMAP.md  SALE_READINESS_PROGRESS.md  TARGET_CODE_ARCHITECTURE.md  UI_CONSISTENCY.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
(+227 files in other folders)
